# OriginNSFitGJB

./: .gitignore  OriginNSFitGJB-GUI.spec  OriginNSFitGJB.spec  README.md  pyproject.toml  requirements-build.txt  requirements.txt
docs/: user_manual.md
docs/superpowers/plans/: 2026-06-11-gui-workbench.md
docs/superpowers/specs/: 2026-06-11-gui-workbench-design.md
examples/: e739_example.csv  e739_runout_example.csv  example_linear.csv  gjb932_strain_example.csv  gjb_multi_group_example.csv  gjb_runout_example.csv
offline/: README.md  WHEELHOUSE_MANIFEST.txt  install_offline.ps1  requirements-offline.txt  update_wheelhouse.ps1
offline/wheelhouse/: OriginExt-1.2.5-cp312-none-win_amd64.whl  originpro-1.1.15-py3-none-any.whl  originpy-0.0.2-py3-none-any.whl
scripts/: run_originnsfitgjb.py  run_originnsfitgjb_gui.py
src/originnsfitgjb/: __init__.py  analysis_service.py  audit.py  cli.py  data_loader.py  e739.py  fitting.py  gjb.py  origin_client.py
src/originnsfitgjb/gui/: __init__.py  app.py  main_window.py  settings.py  worker.py
src/originnsfitgjb/gui/modules/: __init__.py  base.py  gjb18a.py  gjb18a_page.py  registry.py
src/originnsfitgjb/templates/: e739_graph1.otpu
tests/: test_analysis_service.py  test_gjb_audit.py  test_gui_gjb18a_page.py  test_gui_main_window.py  test_gui_module_registry.py  test_gui_settings.py  test_gui_worker.py  test_origin_cleanup.py
